# ticketbot

./: .pre-commit-config.yaml  CODE_REVIEW.md  README.md  app.html
container/: .env-example  docker-compose-dev.yaml  docker-compose.yaml  grafana.yaml  loki.yaml  promptail.yaml  (+2 more)
services/chat_service/: .env_example  Dockerfile  pyproject.toml  requirements.txt
services/chat_service/app/: main.py
services/chat_service/config/: __init__.py  data.py  model.py
services/chat_service/schema/: __init__.py  app.py
services/chat_service/src/: __init__.py  chat.py  intent_classify.py  llm.py
services/chat_service/src/pipeline/: __init__.py  _base.py  after_service.py  faq.py
services/chat_service/test/integration/: test_api.py
services/chat_service/test/unit/: test_chat.py  test_pipeline.py
services/text2vec_service/: .env-example  Dockerfile  pyproject.toml  requirements.txt
services/text2vec_service/app/: serve_text2vec.py
services/text2vec_service/config/: __init__.py  model.py
services/text2vec_service/schema/: __init__.py  service.py
services/text2vec_service/src/: __init__.py  qwen_embed.py
services/text2vec_service/test/integration/: test_tex2vec_service.py
services/text2vec_service/test/unit/: test_qwen_embed.py
services/vecdb_service/: .env-example  pyproject.toml  requirements.txt
services/vecdb_service/app/: main.py
services/vecdb_service/config/: __init__.py  data.py  embed.py
services/vecdb_service/schema/: __init__.py  app.py
services/vecdb_service/src/: __init__.py  weviate.py
services/vecdb_service/test/: test_api.py
(+32 files in other folders)
