[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vecdb"
version = "0.1.0"
description = "Vector database service"
requires-python = ">=3.10"
authors = [{name = "Tien Dang"}]

[tool.setuptools.packages.find]
exclude = ["*.yaml", "*.yml", "test*", "storage*", "scripts*", "docs*", "dataset*"]
